--- a/main-wiki3-frontend/package.json
+++ b/main-wiki3-frontend/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-csv-to-table": "^0.0.4",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
