--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "^14.20.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
     "http-errors": "~1.6.3",
+    "mime-types": "^2.1.35",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3"
   }
