--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "edit-json-file": "^1.7.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "mime-types": "^2.1.35",
     "morgan": "~1.9.1",
