--- a/markdown-wiki2-frontend/package.json
+++ b/markdown-wiki2-frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-wordcloud": "^1.2.7",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
