--- a/markdown-wiki2-frontend/package.json
+++ b/markdown-wiki2-frontend/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "main-wiki3-frontend",
+  "name": "markdown-wiki2-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "jquery": "^3.6.0",
+    "bootstrap": "^5.2.3",
+    "caniuse-lite": "^1.0.30001451",
+    "jquery": "^3.6.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
-    "react-csv-to-table": "^0.0.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-wordcloud": "^1.2.7",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.1",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
