--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-wordcloud": "^1.2.7",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
+    "react-csv-to-table": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
