--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,19 @@
     "bootstrap": "^5.2.3",
     "caniuse-lite": "^1.0.30001451",
     "jquery": "^3.6.3",
+    "markdown-it": "^13.0.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-csv-to-table": "^0.0.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-wordcloud": "^1.2.7",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
-    "react-csv-to-table": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
