--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
