--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -6,5 +6,7 @@
     "DB_USER": "root",
     "DB_PASSWORD": "",
     "SECRET_TOKEN": "",
-    "SESSION_KEY": ""
+    "SESSION_KEY": "",
+    "USER": "user",
+    "PASS": "123456"
 }
