Implement 2-factor authentication by email

--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -7,6 +7,9 @@
     "DB_PASSWORD": "",
     "SECRET_TOKEN": "",
     "SESSION_KEY": "",
+    "SITE_EMAIL": "",
+    "SITE_EMAIL_PASSWORD": "",
+    "USER_EMAIL": "",
     "USER": "user",
     "PASS": "123456"
 }
