Create modal to edit bookmark and add option to disable 2FA.

--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -7,6 +7,7 @@
     "DB_PASSWORD": "",
     "SECRET_TOKEN": "",
     "SESSION_KEY": "",
+    "USE_2FA": false,
     "SITE_EMAIL": "",
     "SITE_EMAIL_PASSWORD": "",
     "USER_EMAIL": "",
