--- a/frontend/src/config-base.json
+++ b/frontend/src/config-base.json
@@ -1,5 +1,6 @@
 {
     "SITENAME": "Markdown Wiki 2",
     "BACKEND_URL": "http://localhost:4001",
-    "FRONTEND_URL": "http://localhost:3000"
+    "FRONTEND_URL": "http://localhost:3000",
+    "IMPORT_BOOKMARKS_CUSTOM_FUNCTION": ""
 }
