--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -2,6 +2,7 @@
     "SITENAME": "Markdown Wiki 2",
     "SITE_ID": "markdown-wiki2",
     "DB_HOST": "localhost",
+    "DB_PORT": "3306",
     "DB_NAME": "markdownwiki2",
     "DB_USER": "root",
     "DB_PASSWORD": "",
