--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "get-docker-host": "^1.0.3",
     "http-errors": "~1.6.3",
+    "is-in-docker": "^0.1.2",
     "mime-types": "^2.1.35",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
