--- a/docker/Dockerfile.application
+++ b/docker/Dockerfile.application
@@ -8,8 +8,8 @@ RUN git clone https://github.com/tomasantunes/markdown-wiki2
 
 WORKDIR /usr/src/app/markdown-wiki2
 
-COPY secret-config.json /usr/src/app/markdown-wiki2/secret-config.json
-COPY config.json /usr/src/app/markdown-wiki2/frontend/src/config.json
+COPY docker/secret-config.json /usr/src/app/markdown-wiki2/secret-config.json
+COPY docker/config.json /usr/src/app/markdown-wiki2/frontend/src/config.json
 
 ENV NODE_VERSION=18.14.2
 RUN apt-get install -y curl
@@ -34,7 +34,7 @@ RUN pip3 install bookmarks_parser
 
 RUN apt-get install -y nginx
 
-COPY default /etc/nginx/sites-available/default
+COPY docker/default /etc/nginx/sites-available/default
 
 RUN /bin/bash -c "npm start"
 
