--- a/docker/Dockerfile.application
+++ b/docker/Dockerfile.application
@@ -36,7 +36,7 @@ RUN /bin/bash -c "npm install --legacy-peer-deps"
 RUN /bin/bash -c "npm run build"
 WORKDIR /usr/src/app/markdown-wiki2
 
-
+RUN apt-get install -y iproute2
 
 CMD ["/bin/bash", "-c", "npm start --host 0.0.0.0 --port 4001;"]
 
