--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -13,5 +13,6 @@
     "SITE_EMAIL_PASSWORD": "",
     "USER_EMAIL": "",
     "USER": "user",
-    "PASS": "123456"
+    "PASS": "123456",
+    "ENVIRONMENT": "WINDOWS"
 }
