--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ database/mainwiki3-dump2.sql
 database/mainwiki3-dump3.sql
 database/mainwiki3-dump4.sql
 sessions.json
+scripts/tag-bookmarks/bookmarks.json
+scripts/tag-bookmarks/bookmarks-out.json
