Change email settings

--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -14,5 +14,10 @@
     "USER_EMAIL": "",
     "USER": "user",
     "PASS": "123456",
-    "ENVIRONMENT": "WINDOWS"
+    "ENVIRONMENT": "WINDOWS",
+    "SMTP_HOST": "",
+    "SMTP_PORT": "",
+    "SMTP_EMAIL": "",
+    "SMTP_PASSWORD": "",
+    "RECIPIENT_EMAIL": ""
 }
