--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -7,7 +7,7 @@
     "DB_USER": "root",
     "DB_PASSWORD": "",
     "SECRET_TOKEN": "",
-    "SESSION_KEY": "",
+    "SESSION_KEY": "default_key",
     "USE_2FA": false,
     "SITE_EMAIL": "",
     "SITE_EMAIL_PASSWORD": "",
