--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -19,5 +19,6 @@
     "SMTP_PORT": "",
     "SMTP_EMAIL": "",
     "SMTP_PASSWORD": "",
-    "RECIPIENT_EMAIL": ""
+    "RECIPIENT_EMAIL": "",
+    "EXTERNAL_API_KEY": ""
 }
